--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Team [TEAM NAME] Website</title>
+  <title>Michael Scott Paper Company</title>
   <meta name="HandheldFriendly" content="True" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
 </head>
 <body>
   <div>
-      <h1>Welcome to [TEAM NAME'S] application</h1>
+      <h1>Welcome to Dunder Mifflin's application</h1>
     {{{body}}}
 </div>
 <div>
